# snake-in-terminal

./: CMakeLists.txt  Makefile  README.md
src/: gameloop.cpp  gameloop.h  main.cpp  snake.cpp  snake.h
